--- a/app/views/frontiers/show.html.erb
+++ b/app/views/frontiers/show.html.erb
@@ -51,11 +51,11 @@
 <table class="table table-hover">
 <form action="/frontiers/<%= @the_frontier.id %>/calculate" method="post">
 
-      <tr class="table-info">
+      <tr class="table" style = "background-color: #5445FF">
         <th>Name</th>
         <th>Min</th>
         <th>Max</th>
-        <th style ="background-color:#2C3E50; border-bottom: 1px solid #2C3E50"> </th>
+        <th style ="background-color:#39394B; border-bottom: 1px solid #39394B"> </th>
         <th>Exp Ret</th>
         <th>Std Dev</th>
         <th>Skew</th>
@@ -65,11 +65,11 @@
       </tr>
 
       <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
-      <tr class="table-light">
+      <tr class="table">
         <th>  <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </th>
         <td> <input class="form-control" readonly="" type="number"  name="query_min[]" value = <%= input.min %>>   </td>
         <td>  <input class="form-control" readonly=""  type="number"  name="query_max[]" value = <%= input.max %>>  </td>
-        <td style ="background-color:#2C3E50; border-bottom: 1px solid #2C3E50"> </td>
+        <td style ="background-color:#39394B; border-bottom: 1px solid #39394B"> </td>
         <td>  <input class="form-control" readonly=""  type="number"  name="query_mean[]" value = <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).exp_ret*100).round(2) %> >    </td>
         <td>  <input class="form-control" readonly=""  type="number"  name="query_std_dev[]" value = <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).std_dev*100).round(2) %> >  </td>
         <td>  <input class="form-control" readonly=""  type="number"  name="query_skew[]" value = <%= @cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).skew %> >   </td>
@@ -77,11 +77,245 @@
         <td>  <input class="form-control" readonly=""  type="number"  name="query_yield[]" value = <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).yield*100).round(2) %> >  </td>
         <th hidden>  <input class="form-control"   type="number"  name="query_asset_id[]" value = <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).id %>> </th>
         <th hidden>  <input class="form-control"   type="number"  name="coreltation_id" value = <%= @correlations.where({:id => @the_frontier.correlation_id}).at(0).id %>> </th>
+        <th hidden>  <input class="form-control"   type="number"  name="frontier_id" value = <%= @the_frontier.id %>> </th>      
       </tr>
-     
       <% end %>
-      </table>
-      <button type="submit" class="btn-lg btn-success">Caclulate Efficient Frontier</button>
+    </table>
+   
+   <h4> Relative Constraints </h4>
+   <table class="table table-hover">
+      <tr class="table" style = "background-color: #5445FF" >
+        <th>Weight</th>
+        <th> > </th>
+        <th>Asset Class 1</th>
+        <th> + </th>
+        <th>Asset Class 2</th>
+        <th> + </th>
+        <th>Asset Class 3</th>
+        <th> > </th> 
+        <th>Asset Class 1</th>
+        <th> + </th>
+        <th>Asset Class 2</th>
+        <th>  +  </th>
+        <th>Asset Class 3</th>
+        <th>   >  </th> 
+        <th> Weight </th> 
+      </tr>
+      <tr>
+        <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_left2_constraints1" name="query_left2_constraints1" value = 100>   </td> 
+        <td>></td>
+        <td>         
+            <select type="text" id="query_left_constraints1" name="query_left_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints1" name="query_left_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints1" name="query_left_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td> 
+         <td> > </td> 
+         <td>         
+            <select type="text" id="query_right_constraints1" name="query_right_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_right_constraints1" name="query_right_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_right_constraints1" name="query_right_constraints1[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> > </td>
+         <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_right2_constraints1" name="query_right2_constraints1" value = 0>   </td>           
+      </tr>
+      <tr>
+        <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_left2_constraints2" name="query_left2_constraints2" value = 100>   </td> 
+        <td>></td>
+        <td>         
+            <select type="text" id="query_left_constraints2" name="query_left_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints2" name="query_left_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints2" name="query_left_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td> 
+         <td> > </td> 
+         <td>         
+            <select type="text" id="query_right_constraints2" name="query_right_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_right_constraints2" name="query_right_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+         <td>         
+            <select type="text" id="query_right_constraints2" name="query_right_constraints2[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> > </td>
+         <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_right2_constraints2" name="query_right2_constraints2" value = 0>   </td>             
+      </tr>
+      <tr>
+        <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_left2_constraints3" name="query_left2_constraints3" value = 100>   </td> 
+        <td>></td>
+         <td>         
+            <select type="text" id="query_left_constraints3" name="query_left_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints3" name="query_left_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_left_constraints3" name="query_left_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td> 
+         <td> > </td> 
+         <td>         
+            <select type="text" id="query_right_constraints3" name="query_right_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_right_constraints3" name="query_right_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>      
+         <td> + </td>
+           <td>         
+            <select type="text" id="query_right_constraints3" name="query_right_constraints3[]" class="form-control">
+              <optgroup label="Curren Selection">
+              <option>  </option>
+              <optgroup label="Asset Class">
+               <% @the_frontier_inputs.where(:inclusion => "yes").each do |input| %>
+                <option> <%= @list_of_asset_classes.where({:id => input.asset_class_id}).at(0).name %> </option>
+              <%end%>
+            </select>
+         </td>
+         <td> > </td>
+         <td> <input class="form-control" type="number" min="0" max="100" step="1" id="query_right2_constraints3" name="query_right2_constraints3" value = 0>   </td>            
+      </tr>
+   </table>
+    <button type="submit" class="btn btn-lg btn-success">Caclulate Efficient Frontier</button>
       </form>
   </div>
 <hr>
@@ -90,8 +324,8 @@
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <button type = "button" class="btn btn-primary btn-lg">
-        <a class = "text-light" data-toggle="collapse" data-parent="#accordion" href="#collapse1">Edit Asset Classes</a>
+      <button type = "button" class="btn btn-secondary btn-lg">
+        <a class = "text-white" data-toggle="collapse" data-parent="#accordion" href="#collapse1">Edit Asset Classes</a>
       </button>
     </div>
 <div id="collapse1" class="panel-collapse collapse in">
@@ -120,15 +354,15 @@
             <div class="form-check"> <input class="form-check-input" type="checkbox" value= <%= input.asset_class_id %> name = "include[]"> </div>
             <% end%>
         </td>
-        <td>  <input class="form-control" type="number" min="0" max="100" step="1" id="min_box" name="query_min[]" value = "0">  </td>
-        <td> <input class="form-control" type="number" min="0" max="100" step="1" id="max_box" name="query_max[]" value = "100">   </td>
+        <td>  <input class="form-control" type="number" min="0" max="100" step="1" id="min_box" name="query_min[]" value = <%= input.min %>>  </td>
+        <td> <input class="form-control" type="number" min="0" max="100" step="1" id="max_box" name="query_max[]" value = <%= input.max %>>   </td>
         <td style ="background-color:#2C3E50; border-bottom: 1px solid #2C3E50"> </td>
         <td>  <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).exp_ret*100).round(1) %>%    </td>
         <td>  <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).std_dev*100).round(1) %>%  </td>
         <td>  <%= @cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).skew %>  </td>
         <td>  <%= @cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).kurt %>  </td>
         <td>  <%= (@cma_inputs.where({:cma_id => @the_frontier.cma_id}).where({:asset_class_id => input.asset_class_id}).at(0).yield*100).round(1) %>%  </td>
-        <td hidden>  <input   class="form-control"  id="query_id" name="query_id[]" value = <%= input.id %>> </td>
+        <td hidden>  <input class="form-control"  id="query_id" name="query_id[]" value = <%= input.id %>> </td>
         <td hidden>  <input class="form-control" type="number" id="max_box" name="query_asset_class_id[]" value = <%= input.asset_class_id %> hidden>    </td>
         
       </tr>
