--- a/app/views/asset_classes/index.html.erb
+++ b/app/views/asset_classes/index.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-6">
     <table class="table table-hover">
-      <tr class="table-info">
+      <tr class="table" style = "background-color: #5445FF">
         <th>Name</th>
         <th>Broad Asset Class</th>
         <th>Sub-Asset Class</th>
@@ -18,7 +18,7 @@
       </tr>
 
       <% @list_of_asset_classes.each do |an_asset_class| %>
-      <tr class="table-light">
+      <tr class="table">
         <th>  <%= an_asset_class.name %> </th>
         <td>  <%= an_asset_class.broad_type %>    </td>
         <td>  <%= an_asset_class.subtype %>  </td>
