--- a/app/views/correlations/index.html.erb
+++ b/app/views/correlations/index.html.erb
@@ -13,14 +13,14 @@
   <div class="col-6">
     <table class="table table-hover">
       <thead>
-        <tr class="table-info">
+        <tr class="table" style = "background-color: #5445FF">
           <th>Name</th>
           <th>Details</th>
           <th>Delete</th>
         </tr>
       <tbody>
       <% @list_of_correlations.each do |a_correlation| %>
-      <tr class="table-light">
+      <tr class="table">
         <th><%= a_correlation.name %></th>
         <td> <a  href="/correlations/<%= a_correlation.id %>">Show Details</a> </td>
         <td> <button data-toggle="modal" data-target="#exampleModal" type="button" class="btn btn-light text-danger">Delete </button>  </td>
