--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -1,39 +1,23 @@
 <div>
   <div>
-    <h1>
-      List of all forecasts
-    </h1>
+    <h3>List of all Forecasts</h3>
   </div>
 </div>
 
 <hr>
-
-<div>
-  <div>
-    <h2>
-      Add a new forecast
-    </h2>
-
+<h4>Add a new Forecast</h4>
+<div class="row col-12">
+  <div class="col-4">
     <form action="/insert_forecast" method="post">
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
+      <div class="form-group">
+        <label for="user_id_box" hidden></label>
+        <input type="text" id="user_id_box" name="query_user_id" value = <%= @current_user.id%> hidden>
       </div>
-
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name">
+      <div class="form-group">
+        <label for="name_box">Name</label>
+        <input type="text" id="name_box" name="query_name" class="form-control">
       </div>
-
-      <button>
-        Create forecast
-      </button>
+      <input type="submit" value="Create New Forecast" class="btn btn-success btn-lg"> 
     </form>
   </div>
 </div>
@@ -43,28 +27,12 @@
   <div>
     <table>
       <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          User
-        </th>
-
-        <th>
-          Name
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
+        <th>ID</th>
+        <th>User</th>
+        <th>Name</th>
+        <th>Created at</th>
+        <th>Updated at</th>
+        <th> </th>
       </tr>
 
       <% @list_of_forecasts.each do |a_forecast| %>
@@ -100,3 +68,4 @@
 </div>
 
 <hr>
+
