--- a/app/views/frontiers/index.html.erb
+++ b/app/views/frontiers/index.html.erb
@@ -12,14 +12,14 @@
 <div class="row">
   <div class="col-6">
     <table class="table table-hover">
-      <tr class="table-info">
+      <tr class="table" style = "background-color: #5445FF">
         <th>Name </th>
         <th>Details</th>
         <th>Delete</th>
       </tr>
 
-      <% @current_user.frontiers.each do |a_frontier| %>
-      <tr class="table-light">
+      <% @current_user.frontiers.order(name: :asc).each do |a_frontier| %>
+      <tr class="table">
         <td> <%= a_frontier.name %>  </td>
         <td> <a href="/frontiers/<%= a_frontier.id %>"> Show details </a> </td>
         <td> <a class="text-danger" href="/delete_frontier/<%= a_frontier.id %>">Delete</a> </td>
@@ -32,7 +32,7 @@
 <hr>
 
 <h4> Add a new Efficient Frontier Analysis</h4>
-<div class="row">
+<div class="row col-12">
   <div class="col-4">
      <form action="/insert_frontier" method="post">
       <div class="form-group">
@@ -59,9 +59,17 @@
             <%end%>
          <select>
       </div>  
-      <table class="table table-hover">
 
-
+    <div>
+      <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+              <button type = "button" class="btn btn-secondary btn-lg">
+                  <a class = "text-white" data-toggle="collapse" data-parent="#accordion" href="#collapse1">Add Asset Classes</a>
+              </button>
+          </div>
+<div id="collapse1" class="panel-collapse collapse in">
+   <table class="table table-hover">
       <tr class="table-info">
         <th>Name</th>
         <th>Check to Include</th>
@@ -85,6 +93,10 @@
 
       <input type="submit" value="Create New Efficient Frontier" class="btn btn-success btn-lg"> 
     </form>
+
+    </div>
+</div>
+</div>
       </div>
     </div>
   </div>
