--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,80 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FinalProject</title>
+<style>
+
+ /* .navbar-nav { 
+            margin-left: auto; 
+        }  */
+.grid-container {
+  display: grid;
+  grid-template-columns: 300px auto ;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  background-color: #1C1B29;
+  padding: 20px;
+}
+
+.grid-container > div {
+  background-color: #39394B;
+  grid-template-columns: auto ;
+  text-align: left;
+  padding: 20px 0;
+  color: #FFFFFF;
+}
+.vertical-menu {
+  width: 300px;
+}
+
+.vertical-menu a {
+  background-color: #1C1B29;
+  color: #FFFFFF;
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  background-color: #5445FF;
+}
+
+.vertical-menu a.active {
+  background-color: #5445FF;
+  color: #FFFFFF;
+}
+
+.accordion {
+  background-color: #39394B;
+  color: #FFFFFF;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #5445FF; 
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+}
+</style>
+
+<title>FinalProject</title>
     <%= csrf_meta_tags %>
      
 
      
     <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Make it responsive to small screens -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csp_meta_tag %>
@@ -17,7 +83,7 @@
     <meta charset="utf-8">
 
     <!-- Connect Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css">
 
     <!-- Connect Bootstrap JavaScript and its dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
@@ -39,62 +105,86 @@
   </head>
 
   <body>
+
   
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav style = "background-color: #39394B" class="navbar navbar-expand-lg navbar-dark ">
+
   <a class="navbar-brand" href="#">MPJ CO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Account</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="/edit_user_profile">Edit Profile</a>
+          <a class="dropdown-item" href="/user_sign_out">Sign Out</a>
+        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/asset_classes">Asset Class Overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/cmas">Capital Market Assumptions</a>
-      </li>
-      
-      <li class="nav-item">
-        <a class="nav-link" href="/correlations">Correlation Assumptions</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/frontiers">Efficient Frontier Analysis</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/forecasts">Forecast Analysis</a>
-      </li>
-      
-     
       <li class="nav-item">
         <a class="nav-link" href="/user_sign_in">Sign In</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/user_sign_out">Sign Out</a>
       </li>
-            <li class="nav-item">
-        <a class="nav-link" href="/user_sign_up">Sign Up</a>
-      </li>
+      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
+   </div>
 </nav>
+<div class="grid-container">
+  <div class="vertical-menu">
+    <a href="/" class="active">Home</a>
+    <button class="accordion">Inputs</button>
+     <div class="panel grid-container">   
+          <a class="dropdown-item" href="/asset_classes">Asset Classes</a>
+          <a class="dropdown-item" href="/cmas">Capital Market Assumptions</a>
+          <a class="dropdown-item" href="/correlations">Correlations</a>
+     </div>   
+    <button class="accordion">Portfolios</button>
+    <div class="panel grid-container">
+        <a class="dropdown-item active" href="/portfolios">All Portfolios</a>   
+           <% @current_user.portfolios.order(name: :asc).each do |a_portfolio| %>
+          <a class="dropdown-item" href="/portfolios/<%= a_portfolio.id %>"><%= a_portfolio.name %></a>
+          <% end %>
+     </div>  
+  <button class="accordion">Frontier Analysis</button>
+   <div class="panel grid-container">
+          <a class="dropdown-item active" href="/frontiers">All Frontiers</a>      
+           <% @current_user.frontiers.order(name: :asc).each do |a_frontier| %>
+          <a class="dropdown-item" href="/frontiers/<%= a_frontier.id %>"><%= a_frontier.name %></a>
+          <% end %>
+     </div>
+  <button class="accordion">Forecast Analysis</button>
+   <div class="panel grid-container">
+          <a class="dropdown-item active" href="/forecasts">All Forecasts</a>     
+           <% @current_user.forecasts.order(name: :asc).each do |a_forecast| %>
+          <a class="dropdown-item" href="/forecasts/<%= a_forecast.id %>"><%= a_forecast.name %></a>
+          <% end %>
+     </div>    
+  </div>
+  <div> <%= yield %>  </div>
 
-    
-    <p style = "color: green"><%= notice%></p>
-    <p style = "color: red"><%= alert%></p>
+</div>
+ <script>
+var acc = document.getElementsByClassName("accordion");
+var i;
 
-    
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.display === "block") {
+      panel.style.display = "none";
+    } else {
+      panel.style.display = "block";
+    }
+  });
+}
+</script>   
 
-
-
-    <%= yield %>
+ 
   </body>
 
   
